# grannylegacy-cheat

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  dllmain.cpp
.github/: copilot-instructions.md
mapping/dummydll/: __Generated
mapping/scripts/: get_mappings.py  preview_flagged.py
src/cs/: Main.cpp
src/cs/core/: Bootstrap.cpp  Bootstrap.h  MinHookDecls.h  MinHookStubs.cpp  Rva.h  UnityTypes.h
src/cs/features/: FreezeGranny.cpp  FreezeGranny.h
src/cs/hooks/: Hooks.cpp  Hooks.h
src/cs/ui/: Menu.cpp  Menu.h
src/cs/util/: Logger.cpp  Logger.h
src/injector/: Injector.cpp
src/resources/: flagged_methods.json  mappings.json
